Fix form data capture issue by implementing prefixes for multiple forms
Resolved a problem where form data was not being captured correctly due to the presence of
multiple forms with overlapping field names. Added unique prefixes to each form, ensuring
that data is properly bound and validated upon submission.

Updated code within the views

- Updated `BillingAddressForm` with prefix "billing_address_form".
- Updated `ShippingAddressForm` with prefix "shipping_address_form".
- Ensures unique identification of form fields when handling multiple forms on the same page,
  preventing data conflicts during submission.

The forms now behaves correctly by submitting as well as saving in the datat to the db

--- a/src/static/css/css.css
+++ b/src/static/css/css.css
@@ -3295,3 +3295,28 @@ legend {
     display: grid;
     grid-template-columns: repeat(10, 1fr);
 }
+
+
+/* alert notifications */.alert-notification {
+    position: fixed;
+    right: 0;
+    border: 2px solid white;
+    bottom: 70px;
+    background: #649a64;
+    padding: 14px;
+    color: white;
+    border: 3px solid white;
+    z-index: 100000;
+    animation-name: dance; 
+    animation-duration: 5s; 
+    animation-fill-mode: forwards;
+}
+
+@keyframes dance {
+    0%   {bottom: 70px;}
+    50% {bottom: 500px;}
+    75% {bottom: 700px;}
+    80% {bottom: 70px;}
+    100% {bottom: -100%}
+    
+}
